# launcher-audio

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  clang.flac  pyproject.toml  setup.py
.github/workflows/: build.yml
examples/: looping_demo.py  panning_demo.py  ping_test.py  play_file.py  timeline_song.py
fa_launcher_audio/: __init__.py  audio_impl.c  cli.py  panner_node.c  panner_node.h  pitch.py  tuning.py
fa_launcher_audio/_internals/: cache.py  commands.py  engine.py  manager.py  parameters.py  sound.py  sources.py  worker.py
fa_launcher_audio/_internals/bindings/: __init__.py  audio_defs.h  ffi_build.py
tests/: __init__.py  conftest.py  test_commands.py  test_integration.py  test_parameters.py
